--- a/index.html
+++ b/index.html
@@ -2,81 +2,86 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>As Melhores de Todos os Tempos</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', sans-serif;
-            background: linear-gradient(to bottom, #1f1f1f, #3a3a3a);
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 2.2rem;
-            margin-bottom: 0.2rem;
-        }
-        p {
-            margin-top: 0;
-            font-size: 1rem;
-            color: #ccc;
-        }
-        .playlist {
-            margin: 20px auto;
-            max-width: 400px;
-            background: #2c2c2c;
-            border-radius: 12px;
-            padding: 16px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.4);
-        }
-        .playlist img {
-            width: 100%;
-            border-radius: 8px;
-        }
-        .playlist a {
-            display: inline-block;
-            margin-top: 10px;
-            padding: 10px 18px;
-            background-color: #1db954;
-            color: white;
-            text-decoration: none;
-            border-radius: 50px;
-            font-weight: bold;
-        }
-        .playlist a:hover {
-            background-color: #1ed760;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>As Melhores de Todos os Tempos</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 20px;
+      font-family: Arial, sans-serif;
+      background-color: #0f0f0f;
+      color: white;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2em;
+      margin-bottom: 0;
+    }
+    p {
+      color: #ccc;
+      margin-top: 0.3em;
+    }
+    .card {
+      background-color: #1f1f1f;
+      border-radius: 12px;
+      margin: 20px auto;
+      max-width: 420px;
+      padding: 10px;
+      box-shadow: 0 0 10px rgba(0,255,100,0.2);
+    }
+    .card img {
+      width: 100%;
+      border-radius: 10px;
+    }
+    .card a {
+      display: block;
+      background-color: #1db954;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      margin-top: 12px;
+      padding: 12px;
+      border-radius: 30px;
+      transition: background 0.3s;
+    }
+    .card a:hover {
+      background-color: #1ed760;
+    }
+  </style>
 </head>
 <body>
-    <h1>🎶 As Melhores de Todos os Tempos</h1>
-    <p>Uma jornada musical pelos anos 80, 90, 2000, 2010 e 2020</p>
+  <h1>🎶 As Melhores de Todos os Tempos</h1>
+  <p>Uma jornada musical pelos anos 80, 90, 2000, 2010 e 2020</p>
 
-    <div class="playlist">
-        <img src="anos80.jpg" alt="Anos 80">
-        <a href="#" target="_blank">▶️ Ouvir Anos 80</a>
-    </div>
-    <div class="playlist">
-        <img src="anos90.jpg" alt="Anos 90">
-        <a href="#" target="_blank">▶️ Ouvir Anos 90</a>
-    </div>
-    <div class="playlist">
-        <img src="anos2000.jpg" alt="Anos 2000">
-        <a href="#" target="_blank">▶️ Ouvir Anos 2000</a>
-    </div>
-    <div class="playlist">
-        <img src="anos2010.jpg" alt="Anos 2010">
-        <a href="#" target="_blank">▶️ Ouvir Anos 2010</a>
-    </div>
-    <div class="playlist">
-        <img src="anos2020.jpg" alt="Anos 2020">
-        <a href="#" target="_blank">▶️ Ouvir Anos 2020</a>
-    </div>
-    <div class="playlist">
-        <img src="top500.jpg" alt="Top 500">
-        <a href="#" target="_blank">🚀 Playlist Completa</a>
-    </div>
+  <div class="card">
+    <img src="anos80.png" alt="Anos 80">
+    <a href="https://open.spotify.com/playlist/1kyno7tpXSmMPWKsTaQ27g" target="_blank">▶️ Ouvir Top 100 – Anos 80</a>
+  </div>
+
+  <div class="card">
+    <img src="anos90.png" alt="Anos 90">
+    <a href="https://open.spotify.com/playlist/1MyeBM0k7JU5rVrvgxFHCr" target="_blank">▶️ Ouvir Anos 90</a>
+  </div>
+
+  <div class="card">
+    <img src="anos2000.png" alt="Anos 2000">
+    <a href="https://open.spotify.com/playlist/2ECchg0xa7RJbDWargrvpQ" target="_blank">▶️ Ouvir Anos 2000</a>
+  </div>
+
+  <div class="card">
+    <img src="anos2010.png" alt="Anos 2010">
+    <a href="https://open.spotify.com/playlist/3Mem1Xof5FPl030rKlJw9y" target="_blank">▶️ Ouvir Anos 2010</a>
+  </div>
+
+  <div class="card">
+    <img src="anos2020.png" alt="Anos 2020">
+    <a href="https://open.spotify.com/playlist/0zRm4xMpESGzEFHjVAYRKW" target="_blank">▶️ Ouvir Anos 2020</a>
+  </div>
+
+  <div class="card">
+    <img src="top500.png" alt="Top 500">
+    <a href="https://open.spotify.com/playlist/36vcZUy9RJ3wrwpbI8MDSq" target="_blank">🚀 Ouvir Playlist Completa</a>
+  </div>
 </body>
 </html>
