--- a/index.html
+++ b/index.html
@@ -8,31 +8,34 @@
   <style>
     body {
       margin: 0;
-      padding: 20px;
+      padding: 10px;
       font-family: Arial, sans-serif;
       background-color: #0f0f0f;
       color: white;
       text-align: center;
     }
     h1 {
-      font-size: 2em;
-      margin-bottom: 0;
+      font-size: 1.6em;
+      margin-bottom: 0.3em;
     }
     p {
       color: #ccc;
-      margin-top: 0.3em;
+      margin-top: 0;
+      font-size: 0.95em;
     }
     .card {
       background-color: #1f1f1f;
-      border-radius: 12px;
-      margin: 20px auto;
-      max-width: 420px;
-      padding: 10px;
-      box-shadow: 0 0 10px rgba(0,255,100,0.2);
+      border-radius: 10px;
+      margin: 12px auto;
+      max-width: 340px;
+      padding: 8px;
+      box-shadow: 0 0 6px rgba(0,255,100,0.2);
     }
     .card img {
       width: 100%;
-      border-radius: 10px;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 6px;
     }
     .card a {
       display: block;
@@ -40,10 +43,10 @@
       color: white;
       text-decoration: none;
       font-weight: bold;
-      margin-top: 12px;
-      padding: 12px;
-      border-radius: 30px;
-      transition: background 0.3s;
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 25px;
+      font-size: 0.95em;
     }
     .card a:hover {
       background-color: #1ed760;
@@ -56,32 +59,27 @@
 
   <div class="card">
     <img src="anos80.png" alt="Anos 80">
-    <a href="https://open.spotify.com/playlist/1kyno7tpXSmMPWKsTaQ27g" target="_blank">▶️ Ouvir Top 100 – Anos 80</a>
+    <a href="https://open.spotify.com/playlist/1kyno7tpXSmMPWKsTaQ27g" target="_blank">▶️ Top 100 – Anos 80</a>
   </div>
-
   <div class="card">
     <img src="anos90.png" alt="Anos 90">
-    <a href="https://open.spotify.com/playlist/1MyeBM0k7JU5rVrvgxFHCr" target="_blank">▶️ Ouvir Anos 90</a>
+    <a href="https://open.spotify.com/playlist/1MyeBM0k7JU5rVrvgxFHCr" target="_blank">▶️ As Melhores: Anos 90</a>
   </div>
-
   <div class="card">
     <img src="anos2000.png" alt="Anos 2000">
-    <a href="https://open.spotify.com/playlist/2ECchg0xa7RJbDWargrvpQ" target="_blank">▶️ Ouvir Anos 2000</a>
+    <a href="https://open.spotify.com/playlist/2ECchg0xa7RJbDWargrvpQ" target="_blank">▶️ As Melhores: Anos 2000</a>
   </div>
-
   <div class="card">
     <img src="anos2010.png" alt="Anos 2010">
-    <a href="https://open.spotify.com/playlist/3Mem1Xof5FPl030rKlJw9y" target="_blank">▶️ Ouvir Anos 2010</a>
+    <a href="https://open.spotify.com/playlist/3Mem1Xof5FPl030rKlJw9y" target="_blank">▶️ As Melhores: Anos 2010</a>
   </div>
-
   <div class="card">
     <img src="anos2020.png" alt="Anos 2020">
-    <a href="https://open.spotify.com/playlist/0zRm4xMpESGzEFHjVAYRKW" target="_blank">▶️ Ouvir Anos 2020</a>
+    <a href="https://open.spotify.com/playlist/0zRm4xMpESGzEFHjVAYRKW" target="_blank">▶️ As Melhores: Anos 2020</a>
   </div>
-
   <div class="card">
     <img src="top500.png" alt="Top 500">
-    <a href="https://open.spotify.com/playlist/36vcZUy9RJ3wrwpbI8MDSq" target="_blank">🚀 Ouvir Playlist Completa</a>
+    <a href="https://open.spotify.com/playlist/36vcZUy9RJ3wrwpbI8MDSq" target="_blank">🚀 Playlist Completa</a>
   </div>
 </body>
 </html>
