--- a/index.html
+++ b/index.html
@@ -24,29 +24,33 @@
       font-size: 0.95em;
     }
     .card {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       background-color: #1f1f1f;
       border-radius: 10px;
-      margin: 12px auto;
-      max-width: 340px;
-      padding: 8px;
+      margin: 10px auto;
+      max-width: 360px;
+      padding: 10px;
       box-shadow: 0 0 6px rgba(0,255,100,0.2);
     }
     .card img {
-      width: 100%;
-      height: 160px;
+      width: 100px;
+      height: 100px;
       object-fit: cover;
       border-radius: 6px;
+      margin-right: 12px;
     }
     .card a {
-      display: block;
+      flex: 1;
+      display: inline-block;
       background-color: #1db954;
       color: white;
       text-decoration: none;
       font-weight: bold;
-      margin-top: 10px;
-      padding: 10px;
+      padding: 12px;
       border-radius: 25px;
-      font-size: 0.95em;
+      font-size: 0.9em;
     }
     .card a:hover {
       background-color: #1ed760;
