--- a/index.html
+++ b/index.html
@@ -4,86 +4,85 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>As Melhores de Todos os Tempos</title>
+  <title>As Melhores Playlists</title>
   <style>
     body {
       margin: 0;
-      padding: 10px;
-      font-family: Arial, sans-serif;
-      background-color: #0f0f0f;
+      padding: 20px;
+      background-color: #000;
+      font-family: 'Helvetica Neue', sans-serif;
       color: white;
       text-align: center;
     }
     h1 {
-      font-size: 1.6em;
-      margin-bottom: 0.3em;
+      font-size: 1.8em;
+      margin-bottom: 5px;
     }
     p {
-      color: #ccc;
-      margin-top: 0;
+      color: #b3b3b3;
       font-size: 0.95em;
+      margin-top: 0;
     }
-    .card {
+    .playlist-container {
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: space-between;
-      background-color: #1f1f1f;
-      border-radius: 10px;
-      margin: 10px auto;
-      max-width: 360px;
-      padding: 10px;
-      box-shadow: 0 0 6px rgba(0,255,100,0.2);
+      gap: 22px;
+      padding-top: 10px;
     }
-    .card img {
-      width: 100px;
-      height: 100px;
+    .playlist {
+      text-decoration: none;
+      color: white;
+      width: 240px;
+      transition: transform 0.2s;
+    }
+    .playlist:hover {
+      transform: scale(1.03);
+    }
+    .playlist img {
+      width: 240px;
+      height: 240px;
       object-fit: cover;
       border-radius: 6px;
-      margin-right: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.6);
     }
-    .card a {
-      flex: 1;
-      display: inline-block;
-      background-color: #1db954;
-      color: white;
-      text-decoration: none;
+    .playlist span {
+      display: block;
+      margin-top: 8px;
       font-weight: bold;
-      padding: 12px;
-      border-radius: 25px;
-      font-size: 0.9em;
-    }
-    .card a:hover {
-      background-color: #1ed760;
+      font-size: 0.95em;
     }
   </style>
 </head>
 <body>
-  <h1>🎶 As Melhores de Todos os Tempos</h1>
-  <p>Uma jornada musical pelos anos 80, 90, 2000, 2010 e 2020</p>
+  <h1>🎶 As Melhores Playlists</h1>
+  <p>De 1980 a 2020, ouça os maiores hits por década</p>
 
-  <div class="card">
-    <img src="anos80.png" alt="Anos 80">
-    <a href="https://open.spotify.com/playlist/1kyno7tpXSmMPWKsTaQ27g" target="_blank">▶️ Top 100 – Anos 80</a>
-  </div>
-  <div class="card">
-    <img src="anos90.png" alt="Anos 90">
-    <a href="https://open.spotify.com/playlist/1MyeBM0k7JU5rVrvgxFHCr" target="_blank">▶️ As Melhores: Anos 90</a>
-  </div>
-  <div class="card">
-    <img src="anos2000.png" alt="Anos 2000">
-    <a href="https://open.spotify.com/playlist/2ECchg0xa7RJbDWargrvpQ" target="_blank">▶️ As Melhores: Anos 2000</a>
-  </div>
-  <div class="card">
-    <img src="anos2010.png" alt="Anos 2010">
-    <a href="https://open.spotify.com/playlist/3Mem1Xof5FPl030rKlJw9y" target="_blank">▶️ As Melhores: Anos 2010</a>
-  </div>
-  <div class="card">
-    <img src="anos2020.png" alt="Anos 2020">
-    <a href="https://open.spotify.com/playlist/0zRm4xMpESGzEFHjVAYRKW" target="_blank">▶️ As Melhores: Anos 2020</a>
-  </div>
-  <div class="card">
-    <img src="top500.png" alt="Top 500">
-    <a href="https://open.spotify.com/playlist/36vcZUy9RJ3wrwpbI8MDSq" target="_blank">🚀 Playlist Completa</a>
+  <div class="playlist-container">
+    <a class="playlist" href="https://open.spotify.com/playlist/1kyno7tpXSmMPWKsTaQ27g" target="_blank">
+      <img src="anos80.png" alt="Anos 80">
+      <span>As 100 Melhores Anos 80</span>
+    </a>
+    <a class="playlist" href="https://open.spotify.com/playlist/1MyeBM0k7JU5rVrvgxFHCr" target="_blank">
+      <img src="anos90.png" alt="Anos 90">
+      <span>As 100 Melhores Anos 90</span>
+    </a>
+    <a class="playlist" href="https://open.spotify.com/playlist/2ECchg0xa7RJbDWargrvpQ" target="_blank">
+      <img src="anos2000.png" alt="Anos 2000">
+      <span>As 100 Melhores Anos 2000</span>
+    </a>
+    <a class="playlist" href="https://open.spotify.com/playlist/3Mem1Xof5FPl030rKlJw9y" target="_blank">
+      <img src="anos2010.png" alt="Anos 2010">
+      <span>As 100 Melhores Anos 2010</span>
+    </a>
+    <a class="playlist" href="https://open.spotify.com/playlist/0zRm4xMpESGzEFHjVAYRKW" target="_blank">
+      <img src="anos2020.png" alt="Anos 2020">
+      <span>As 100 Melhores Anos 2020</span>
+    </a>
+    <a class="playlist" href="https://open.spotify.com/playlist/36vcZUy9RJ3wrwpbI8MDSq" target="_blank">
+      <img src="top500.png" alt="Top 500">
+      <span>As 500 Melhores de Todos os Tempos</span>
+    </a>
   </div>
 </body>
 </html>
